Give the paragraph element on line 14 the class intro

--- a/108-cc-styling-the-intro-paragraph/index.html
+++ b/108-cc-styling-the-intro-paragraph/index.html
@@ -11,7 +11,7 @@
       <h1>Lake Tahoe, California</h1>
     </header>
     <div class="primary-content t-border">
-      <p>
+      <p class="intro"
         Lake Tahoe is one of the most <span>breathtaking attractions</span> located in California. It's home to a number of ski resorts, summer outdoor recreation, and tourist attractions. Snow and skiing are a significant part of the area's reputation.
       </p>
       <a href="#more">Find out more</a>
