In the preview, notice how the floats made the parent container's height collapse. In the HTML file, give the .secondary-content div the specified class for clearing floats

--- a/131-cc--floats/index.html
+++ b/131-cc--floats/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body> 
-		<div class="secondary-content t-border"> 
+		<div class="secondary-content t-border group"> 
       <div class="content-lodging">
         <img src="resort.jpg" alt="Resort">
         <h3>From Tents to Resorts</h3>
